subiendo finalizar curso parte 2

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -110,6 +110,7 @@ jquery.wysiwyg.jpg: jquery.wysiwyg-605bd83bd4576cd12f3fe71e6a853e4f.jpg
 jquery.wysiwyg.no-alpha.gif: jquery.wysiwyg.no-alpha-4c8f82d3b4b7f0fe818c23aa33cb6dbc.gif
 kontact-date.png: kontact-date-1f632631146bc71cb080bdbe1cf8f9c7.png
 like-ok.png: like-ok-5b23dae20530dbb15febb75a50f3d005.png
+lock.png: lock-0a97a047117fefcbc52d8d78fd534f53.png
 login-bg.jpg: login-bg-b25c568c9a2f0e236d0fa66c79ab4e5b.jpg
 logo.png: logo-fa0492936cacdc96447724b9f8375ec1.png
 menu-actualizaciones.png: menu-actualizaciones-a416272b46ad0ab43fb5510fd9424664.png
@@ -221,5 +222,5 @@ teacher_small.png: teacher_small-4723c307eaac0fa1005ad89eeb54620e.png
 teacher_xsmall.png: teacher_xsmall-eb790ff7fce5fc451be0d648e0a5abfc.png
 teacher_xxsmall.png: teacher_xxsmall-8dea30577360e0254c48ed55f46adcd6.png
 trash.png: trash-fed6d579cb903b3e1a5b8fd4dde6cb5b.png
-application.js: application-5b02d360a7be291cd652a6b433f84c93.js
+application.js: application-51058d7b3767ec76250c240c12d1e400.js
 application.css: application-ba4fd6a3c0a73ae4f647b9f7399b5446.css
