--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -102,6 +102,7 @@ help/tareas/teacher/panel.png: help/tareas/teacher/panel-61558e5bcfb1ac4fa73cc28
 help/tareas/teacher/perfil_tarea.png: help/tareas/teacher/perfil_tarea-d48220a83a423e17fd54ad76810956a5.png
 help/tareas/teacher/subir_archivo.png: help/tareas/teacher/subir_archivo-f9f8449e399731f23ccaa7e398973412.png
 help/tareas/teacher/tareas.png: help/tareas/teacher/tareas-96653324804379c4208badae2af6055b.png
+home.png: home-a9bda954f5dae390279e7e37b3e9e421.png
 iChat.png: iChat-a7d37790470eade586371de901eb6c4f.png
 iChat1.png: iChat1-65ad0eca98a4c9d4f4927d0382cea70e.png
 jquery.wysiwyg.bg.png: jquery.wysiwyg.bg-e2f731628eaa85ee3a9bf4b8d9e21749.png
@@ -176,6 +177,7 @@ minichat_files/talk_chat.png: minichat_files/talk_chat-ffcd251b677ec9c28e81711a2
 minichat_files/talk_speak_chat.png: minichat_files/talk_speak_chat-d7c5d73dd0f7228254df9f63b9020788.png
 minichat_files/webcam_128.png: minichat_files/webcam_128-a3e20d41e89167e0069f97bcd3375583.png
 minichat_files/xchat.png: minichat_files/xchat-883321616bfb596c839ecdef7a9f59d0.png
+new-good.png: new-good-4889b4baca6782a39b5af9ee889e7221.png
 nosotros/alfredo.jpg: nosotros/alfredo-2d9a9f1e30df627ae333e56ff2840f40.jpg
 nosotros/alfredot.png: nosotros/alfredot-5e037d85594aef707cd9d701c07dca71.png
 nosotros/armando.jpg: nosotros/armando-6f4cf3c5fd6320f01140682b31cadea6.jpg
