--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -213,6 +213,7 @@ reports_admin/service.png: reports_admin/service-b5281f26b5da41fdc1c9da1f0b1bd2b
 reports_admin/suport.png: reports_admin/suport-9a24fdf999c4f39eee8be96b1fa40c39.png
 reports_admin/worm_atack.png: reports_admin/worm_atack-3a11e053c82b48251899a29dc6342401.png
 smile.png: smile-59793b048553ed9422dc686a3648e95b.png
+star_image.png: star_image-337d825e6644244881a3f391d4aca7df.png
 student_small.png: student_small-96ca41177c65029bd08ee940983ca236.png
 student_xsmall.png: student_xsmall-91248de13f63f49cde527f95a452d20a.png
 student_xxsmall.png: student_xxsmall-5098060143ade352095b22ff9c09d4c3.png
@@ -224,5 +225,6 @@ teacher_small.png: teacher_small-4723c307eaac0fa1005ad89eeb54620e.png
 teacher_xsmall.png: teacher_xsmall-eb790ff7fce5fc451be0d648e0a5abfc.png
 teacher_xxsmall.png: teacher_xxsmall-8dea30577360e0254c48ed55f46adcd6.png
 trash.png: trash-fed6d579cb903b3e1a5b8fd4dde6cb5b.png
-application.js: application-a0d1db423896fbcf2ad07fb3b20fef95.js
+video.png: video-d39ff5fe5586a5fc90cd42c1806472b8.png
+application.js: application-28c9440f33710019f1679cc498b8d656.js
 application.css: application-ba4fd6a3c0a73ae4f647b9f7399b5446.css
