--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -227,6 +227,7 @@ teacher_small.png: teacher_small-4723c307eaac0fa1005ad89eeb54620e.png
 teacher_xsmall.png: teacher_xsmall-eb790ff7fce5fc451be0d648e0a5abfc.png
 teacher_xxsmall.png: teacher_xxsmall-8dea30577360e0254c48ed55f46adcd6.png
 trash.png: trash-fed6d579cb903b3e1a5b8fd4dde6cb5b.png
+upload.png: upload-dea8a2b793f9384245ce3c5ffefd5bb7.png
 video.png: video-d39ff5fe5586a5fc90cd42c1806472b8.png
 application.js: application-fa1d027d763dd873a2508ceb2c6f111d.js
 application.css: application-ba4fd6a3c0a73ae4f647b9f7399b5446.css
