--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -114,7 +114,8 @@ kontact-date.png: kontact-date-1f632631146bc71cb080bdbe1cf8f9c7.png
 like-ok.png: like-ok-5b23dae20530dbb15febb75a50f3d005.png
 lock.png: lock-0a97a047117fefcbc52d8d78fd534f53.png
 login-bg.jpg: login-bg-b25c568c9a2f0e236d0fa66c79ab4e5b.jpg
-logo.png: logo-fa0492936cacdc96447724b9f8375ec1.png
+login.jpg: login-e7cf318129d596c00f186f241700cc2c.jpg
+logo2.png: logo2-9923a122446bc427031f2db04cf5644f.png
 menu-actualizaciones.png: menu-actualizaciones-a416272b46ad0ab43fb5510fd9424664.png
 menu-amigos.png: menu-amigos-089e303596d461895407cd306d760d9e.png
 menu-calendario.png: menu-calendario-5ef449ee4bdc92f83542d8e0e112edcd.png
@@ -229,5 +230,5 @@ teacher_xxsmall.png: teacher_xxsmall-8dea30577360e0254c48ed55f46adcd6.png
 trash.png: trash-fed6d579cb903b3e1a5b8fd4dde6cb5b.png
 upload.png: upload-dea8a2b793f9384245ce3c5ffefd5bb7.png
 video.png: video-d39ff5fe5586a5fc90cd42c1806472b8.png
-application.js: application-fa1d027d763dd873a2508ceb2c6f111d.js
-application.css: application-ba4fd6a3c0a73ae4f647b9f7399b5446.css
+application.js: application-61c2d254d30dc275a02609e6f9394526.js
+application.css: application-586aee14a133572842196f71f52067fd.css
