subiendo cambios a telefonica

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -15,6 +15,7 @@ course_small.png: course_small-50a92fb31aaef15529d9781c2ae634b7.png
 course_thumb.png: course_thumb-64fecc7269fe8bd87bcce55407481fca.png
 course_xsmall.png: course_xsmall-b78443a489659092cca2ced64e18e369.png
 course_xxsmall.png: course_xxsmall-5b45a51f96b66bd7eb85ccddd0d8eb68.png
+dashboard.png: dashboard-858d2518d217f149905b9bfbd36ecc37.png
 desplegar.png: desplegar-df3c66af2809fb52bedb7c7b83089917.png
 discusiones-notif.png: discusiones-notif-b02f3d0ce29c5a72bb3223f940b08fdf.png
 drag_selector.png: drag_selector-873cf97f10778cdb9da1d58123bcadc6.png
@@ -229,6 +230,7 @@ teacher_xsmall.png: teacher_xsmall-cb77b905b578dbdb8b70e1f9645ba854.png
 teacher_xxsmall.png: teacher_xxsmall-77740dea4492059ff3bfdf4941827361.png
 trash.png: trash-fed6d579cb903b3e1a5b8fd4dde6cb5b.png
 upload.png: upload-dea8a2b793f9384245ce3c5ffefd5bb7.png
+users-users.png: users-users-d8a2fe8a5aed1aa726c22b9da3077c82.png
 video.png: video-d39ff5fe5586a5fc90cd42c1806472b8.png
 application.js: application-7ffa053d50c2c63495de511e04657c34.js
-application.css: application-586aee14a133572842196f71f52067fd.css
+application.css: application-2fec0daff3b7d7659d4d2d87fdca38d9.css
