subiendo assets2precompile

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -7,6 +7,7 @@ anonimus-user/tamano/anonimus2.png: anonimus-user/tamano/anonimus2-66779cb433457
 anonimus-user/tamano/anonimus3.png: anonimus-user/tamano/anonimus3-3f578934b2eeb8a0bc792b084094b077.png
 avatar1.png: avatar1-b830c1e9dac4fd343379439fc3ce5f06.png
 back-new-post.jpg: back-new-post-07ced62151946dfefcbf9fbf4cb2dcab.jpg
+banner.png: banner-dc271de18dbd4883c115e797c56ddf83.png
 blank.gif: blank-18859c4a7f4454262dffc36a3fdb0e4e.gif
 cal.jpg: cal-f8a2fba69e85ff422ee90f910daaeb85.jpg
 chatbubble.png: chatbubble-b424ae0b25d55df9e8db9852438c6619.png
