--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -111,10 +111,13 @@ jquery.wysiwyg.gif: jquery.wysiwyg-108e88348e27533d382a57151bd638cb.gif
 jquery.wysiwyg.jpg: jquery.wysiwyg-605bd83bd4576cd12f3fe71e6a853e4f.jpg
 jquery.wysiwyg.no-alpha.gif: jquery.wysiwyg.no-alpha-4c8f82d3b4b7f0fe818c23aa33cb6dbc.gif
 kontact-date.png: kontact-date-1f632631146bc71cb080bdbe1cf8f9c7.png
+lago.jpg: lago-f52a97e529fe48c116ba86f04cde2d22.jpg
+lago.png: lago-dcb4921b1e51ba06995c57dd1fbd51e0.png
 like-ok.png: like-ok-5b23dae20530dbb15febb75a50f3d005.png
 lock.png: lock-0a97a047117fefcbc52d8d78fd534f53.png
 login-bg.jpg: login-bg-b25c568c9a2f0e236d0fa66c79ab4e5b.jpg
 logo.png: logo-fa0492936cacdc96447724b9f8375ec1.png
+mano.png: mano-9b96499d7196ec6733522895156e50dd.png
 menu-actualizaciones.png: menu-actualizaciones-a416272b46ad0ab43fb5510fd9424664.png
 menu-amigos.png: menu-amigos-089e303596d461895407cd306d760d9e.png
 menu-calendario.png: menu-calendario-5ef449ee4bdc92f83542d8e0e112edcd.png
