--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -10,6 +10,7 @@ back-new-post.jpg: back-new-post-07ced62151946dfefcbf9fbf4cb2dcab.jpg
 banner.png: banner-dc271de18dbd4883c115e797c56ddf83.png
 blank.gif: blank-18859c4a7f4454262dffc36a3fdb0e4e.gif
 cal.jpg: cal-f8a2fba69e85ff422ee90f910daaeb85.jpg
+cel.png: cel-f9ef5a67dc3fb8dadc725067327b693f.png
 chatbubble.png: chatbubble-b424ae0b25d55df9e8db9852438c6619.png
 chatfff.png: chatfff-1da5c554c584845c3d3b0da23abe3089.png
 course_small.png: course_small-50a92fb31aaef15529d9781c2ae634b7.png
@@ -234,4 +235,4 @@ upload.png: upload-dea8a2b793f9384245ce3c5ffefd5bb7.png
 users-users.png: users-users-d8a2fe8a5aed1aa726c22b9da3077c82.png
 video.png: video-d39ff5fe5586a5fc90cd42c1806472b8.png
 application.js: application-7ffa053d50c2c63495de511e04657c34.js
-application.css: application-2fec0daff3b7d7659d4d2d87fdca38d9.css
+application.css: application-c68e2b96cdf4136a35bf2f37b651c524.css
