--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -7,18 +7,14 @@ anonimus-user/tamano/anonimus2.png: anonimus-user/tamano/anonimus2-66779cb433457
 anonimus-user/tamano/anonimus3.png: anonimus-user/tamano/anonimus3-3f578934b2eeb8a0bc792b084094b077.png
 avatar1.png: avatar1-b830c1e9dac4fd343379439fc3ce5f06.png
 back-new-post.jpg: back-new-post-07ced62151946dfefcbf9fbf4cb2dcab.jpg
-banner.png: banner-dc271de18dbd4883c115e797c56ddf83.png
 blank.gif: blank-18859c4a7f4454262dffc36a3fdb0e4e.gif
 cal.jpg: cal-f8a2fba69e85ff422ee90f910daaeb85.jpg
-cel.png: cel-f9ef5a67dc3fb8dadc725067327b693f.png
 chatbubble.png: chatbubble-b424ae0b25d55df9e8db9852438c6619.png
 chatfff.png: chatfff-1da5c554c584845c3d3b0da23abe3089.png
 course_small.png: course_small-50a92fb31aaef15529d9781c2ae634b7.png
-course_small_movistar.jpg: course_small_movistar-4381a891ed28e34a1611dc619d1f39ec.jpg
 course_thumb.png: course_thumb-64fecc7269fe8bd87bcce55407481fca.png
 course_xsmall.png: course_xsmall-b78443a489659092cca2ced64e18e369.png
 course_xxsmall.png: course_xxsmall-5b45a51f96b66bd7eb85ccddd0d8eb68.png
-dashboard.png: dashboard-858d2518d217f149905b9bfbd36ecc37.png
 desplegar.png: desplegar-df3c66af2809fb52bedb7c7b83089917.png
 discusiones-notif.png: discusiones-notif-b02f3d0ce29c5a72bb3223f940b08fdf.png
 drag_selector.png: drag_selector-873cf97f10778cdb9da1d58123bcadc6.png
@@ -35,7 +31,7 @@ file_icons/word.png: file_icons/word-bdef83398b8c041daf29e2223ea43501.png
 grey.gif: grey-5e3901ebae3bec18ec35c9906e81d679.gif
 happy.png: happy-145725bd10fb8e39e0eb99c0cbde1cb1.png
 happy_smile.png: happy_smile-dce5521441fa1d77cbb7d31521d6985a.png
-header-notification.jpg: header-notification-6dd318000128ad1eeb152158ca4d3653.jpg
+header-notification.jpg: header-notification-90e6da4fbc9e7e9b6e6bcdc5efbdde82.jpg
 help/calendario/calendario-actividades-recientes.png: help/calendario/calendario-actividades-recientes-ac17d07cc55b344678c5bd876755349c.png
 help/calendario/calendario-crear-actividad.png: help/calendario/calendario-crear-actividad-e9e5fd2c99d9e46d086feb754bd8ab8d.png
 help/calificaciones/calificaciones.png: help/calificaciones/calificaciones-646c6025326bb8496be59256ba002117.png
@@ -115,11 +111,13 @@ jquery.wysiwyg.gif: jquery.wysiwyg-108e88348e27533d382a57151bd638cb.gif
 jquery.wysiwyg.jpg: jquery.wysiwyg-605bd83bd4576cd12f3fe71e6a853e4f.jpg
 jquery.wysiwyg.no-alpha.gif: jquery.wysiwyg.no-alpha-4c8f82d3b4b7f0fe818c23aa33cb6dbc.gif
 kontact-date.png: kontact-date-1f632631146bc71cb080bdbe1cf8f9c7.png
+lago.jpg: lago-b9afb90636c0368bc353eb2d246ddebe.jpg
+lago.png: lago-dcb4921b1e51ba06995c57dd1fbd51e0.png
 like-ok.png: like-ok-5b23dae20530dbb15febb75a50f3d005.png
 lock.png: lock-0a97a047117fefcbc52d8d78fd534f53.png
 login-bg.jpg: login-bg-b25c568c9a2f0e236d0fa66c79ab4e5b.jpg
-login.jpg: login-e7cf318129d596c00f186f241700cc2c.jpg
-logo2.png: logo2-9923a122446bc427031f2db04cf5644f.png
+logo.png: logo-fa0492936cacdc96447724b9f8375ec1.png
+mano.png: mano-c9a046e29c3bfeebb7dcfe38d68ee8e3.png
 menu-actualizaciones.png: menu-actualizaciones-a416272b46ad0ab43fb5510fd9424664.png
 menu-amigos.png: menu-amigos-089e303596d461895407cd306d760d9e.png
 menu-calendario.png: menu-calendario-5ef449ee4bdc92f83542d8e0e112edcd.png
@@ -183,7 +181,6 @@ minichat_files/talk_chat.png: minichat_files/talk_chat-ffcd251b677ec9c28e81711a2
 minichat_files/talk_speak_chat.png: minichat_files/talk_speak_chat-d7c5d73dd0f7228254df9f63b9020788.png
 minichat_files/webcam_128.png: minichat_files/webcam_128-a3e20d41e89167e0069f97bcd3375583.png
 minichat_files/xchat.png: minichat_files/xchat-883321616bfb596c839ecdef7a9f59d0.png
-movistar.png: movistar-e324fc6dba4b007dcb96d2fe4c61b5af.png
 new-good.png: new-good-4889b4baca6782a39b5af9ee889e7221.png
 nosotros/alfredo.jpg: nosotros/alfredo-2d9a9f1e30df627ae333e56ff2840f40.jpg
 nosotros/alfredot.png: nosotros/alfredot-5e037d85594aef707cd9d701c07dca71.png
@@ -222,19 +219,18 @@ reports_admin/suport.png: reports_admin/suport-9a24fdf999c4f39eee8be96b1fa40c39.
 reports_admin/worm_atack.png: reports_admin/worm_atack-3a11e053c82b48251899a29dc6342401.png
 smile.png: smile-59793b048553ed9422dc686a3648e95b.png
 star_image.png: star_image-337d825e6644244881a3f391d4aca7df.png
-student_small.png: student_small-4e850e4caa9b8bd388ac1b6d4709f30c.png
-student_xsmall.png: student_xsmall-2c01dce40627b18134e1c37d4cb9d11d.png
-student_xxsmall.png: student_xxsmall-4541b354f798c21add280bffd5c4f838.png
+student_small.png: student_small-96ca41177c65029bd08ee940983ca236.png
+student_xsmall.png: student_xsmall-91248de13f63f49cde527f95a452d20a.png
+student_xxsmall.png: student_xxsmall-5098060143ade352095b22ff9c09d4c3.png
 supervisor_small.png: supervisor_small-4ec26261167c45fe7b4d8318e45f23d0.png
 supervisor_xsmall.png: supervisor_xsmall-bb855168a0c0f15931482ac603dcbb6f.png
 supervisor_xxsmall.png: supervisor_xxsmall-546ca63987866c6d8a69fc569147df0f.png
 suspendido.png: suspendido-ecba2a4505582a520ed1a2ceb4c38211.png
-teacher_small.png: teacher_small-ea3fb2b7b8eb15d36452eb642caf2501.png
-teacher_xsmall.png: teacher_xsmall-cb77b905b578dbdb8b70e1f9645ba854.png
-teacher_xxsmall.png: teacher_xxsmall-77740dea4492059ff3bfdf4941827361.png
+teacher_small.png: teacher_small-4723c307eaac0fa1005ad89eeb54620e.png
+teacher_xsmall.png: teacher_xsmall-eb790ff7fce5fc451be0d648e0a5abfc.png
+teacher_xxsmall.png: teacher_xxsmall-8dea30577360e0254c48ed55f46adcd6.png
 trash.png: trash-fed6d579cb903b3e1a5b8fd4dde6cb5b.png
 upload.png: upload-dea8a2b793f9384245ce3c5ffefd5bb7.png
-users-users.png: users-users-d8a2fe8a5aed1aa726c22b9da3077c82.png
 video.png: video-d39ff5fe5586a5fc90cd42c1806472b8.png
 application.js: application-1a188acae1514d8a4c2cd804cf55b968.js
 application.css: application-ba4fd6a3c0a73ae4f647b9f7399b5446.css
