subiendo cambios para power point en stilos y en validadciones

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -31,6 +31,7 @@ file_icons/image.png: file_icons/image-3fc8d26ae4a7c7bd0bfbe11979966a37.png
 file_icons/page_white_flash.png: file_icons/page_white_flash-4e52698f795c362233f556b744a40d79.png
 file_icons/pdf.png: file_icons/pdf-27d7a45388cdfb7474a82bb2b842b8c4.png
 file_icons/power_point.png: file_icons/power_point-9552eab1fc599a8f4a90de5cc6cbbb1e.png
+file_icons/ppt.png: file_icons/ppt-d127581ad49b894d4794c1cbfeb46dc0.png
 file_icons/text.png: file_icons/text-58a62a426b93ed78147084271aeb27d9.png
 file_icons/word.png: file_icons/word-bdef83398b8c041daf29e2223ea43501.png
 grey.gif: grey-5e3901ebae3bec18ec35c9906e81d679.gif
