subiendo insights e imangenes de error

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -22,6 +22,8 @@ dashboard.png: dashboard-858d2518d217f149905b9bfbd36ecc37.png
 desplegar.png: desplegar-df3c66af2809fb52bedb7c7b83089917.png
 discusiones-notif.png: discusiones-notif-b02f3d0ce29c5a72bb3223f940b08fdf.png
 drag_selector.png: drag_selector-873cf97f10778cdb9da1d58123bcadc6.png
+error_503.png: error_503-8c17cf6371b2eaa8625e7fc0af5a465e.png
+error_503.psd: error_503-75faf20f499d0517f9ecc9bb19ad889d.psd
 fancybox_loading.gif: fancybox_loading-fa43be6c077295cf1d06e683819aff28.gif
 fancybox_sprite.png: fancybox_sprite-978a2a631b1c792cd426609194d3092d.png
 file_icons/access.png: file_icons/access-f8add6f0d77b714cc19e0a1acf47a905.png
