subiendo cambios en browser error y colocando imagenes y styles

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -11,6 +11,7 @@ blank.gif: blank-18859c4a7f4454262dffc36a3fdb0e4e.gif
 cal.jpg: cal-f8a2fba69e85ff422ee90f910daaeb85.jpg
 chatbubble.png: chatbubble-b424ae0b25d55df9e8db9852438c6619.png
 chatfff.png: chatfff-1da5c554c584845c3d3b0da23abe3089.png
+chrome.png: chrome-60f43d61d6df4b2dd72cf6bab82133e8.png
 course_small.png: course_small-50a92fb31aaef15529d9781c2ae634b7.png
 course_thumb.png: course_thumb-64fecc7269fe8bd87bcce55407481fca.png
 course_xsmall.png: course_xsmall-b78443a489659092cca2ced64e18e369.png
@@ -35,6 +36,7 @@ file_icons/power_point.png: file_icons/power_point-9552eab1fc599a8f4a90de5cc6cbb
 file_icons/ppt.png: file_icons/ppt-d127581ad49b894d4794c1cbfeb46dc0.png
 file_icons/text.png: file_icons/text-58a62a426b93ed78147084271aeb27d9.png
 file_icons/word.png: file_icons/word-bdef83398b8c041daf29e2223ea43501.png
+firefox.png: firefox-77013414b86639676217980fba7c07d7.png
 grey.gif: grey-5e3901ebae3bec18ec35c9906e81d679.gif
 happy.png: happy-145725bd10fb8e39e0eb99c0cbde1cb1.png
 happy_smile.png: happy_smile-dce5521441fa1d77cbb7d31521d6985a.png
