--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -118,6 +118,7 @@ jquery.wysiwyg.jpg: jquery.wysiwyg-605bd83bd4576cd12f3fe71e6a853e4f.jpg
 jquery.wysiwyg.no-alpha.gif: jquery.wysiwyg.no-alpha-4c8f82d3b4b7f0fe818c23aa33cb6dbc.gif
 kontact-date.png: kontact-date-1f632631146bc71cb080bdbe1cf8f9c7.png
 like-ok.png: like-ok-5b23dae20530dbb15febb75a50f3d005.png
+load.gif: load-8284631045b615b494ce16f0bab07f09.gif
 lock.png: lock-0a97a047117fefcbc52d8d78fd534f53.png
 login-bg.jpg: login-bg-b25c568c9a2f0e236d0fa66c79ab4e5b.jpg
 login.jpg: login-e7cf318129d596c00f186f241700cc2c.jpg
@@ -203,6 +204,7 @@ ok-red.png: ok-red-49f2aac4afafb40f7c6e85a3adc28388.png
 profr.png: profr-10145bfc5e5910ae2250d563c8adeeea.png
 rails.png: rails-7ad812856c7dc20006d43424bbe57d40.png
 recomendar.png: recomendar-58bb58134095572a8e32621d5cf2bbc5.png
+report.png: report-4b16b2db6d9c64ef9570c470fd203794.png
 reports_admin/add-bug.png: reports_admin/add-bug-c0172adb58a85b377c5237d740c70f11.png
 reports_admin/agresive_bug.png: reports_admin/agresive_bug-feed0448ace2e3aa9b79af51cd126d04.png
 reports_admin/browser.png: reports_admin/browser-11ffc5035e8b59c6a4f6599cd2552683.png
@@ -238,5 +240,5 @@ trash.png: trash-fed6d579cb903b3e1a5b8fd4dde6cb5b.png
 upload.png: upload-dea8a2b793f9384245ce3c5ffefd5bb7.png
 users-users.png: users-users-d8a2fe8a5aed1aa726c22b9da3077c82.png
 video.png: video-d39ff5fe5586a5fc90cd42c1806472b8.png
-application.js: application-bb64b3fe415a0f6b2ab19ecb496b6426.js
-application.css: application-057a2b1b212f948aa999fbe30d57b842.css
+application.js: application-ebeb90d20ffd0a4a91c91a84ac91e797.js
+application.css: application-12c104455b983503283ad5ed48d27e58.css
