Se agregan emoticons a los mensajes de los cuestionarios

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,5 @@
 ---
+562102_468642303207617_1229773735_n.png: 562102_468642303207617_1229773735_n-b39e8129cc9c8942f2d1574852934188.png
 ajax-loader.gif: ajax-loader-a4652bbc75fc8ba02cb4a69163e163be.gif
 al.png: al-a2237d8ba50cd9bfdbf038440061e8ca.png
 anonimus-user/anonimus.png: anonimus-user/anonimus-68c6380300e98796db407afde8217e79.png
@@ -204,6 +205,7 @@ ok-red.png: ok-red-49f2aac4afafb40f7c6e85a3adc28388.png
 profr.png: profr-10145bfc5e5910ae2250d563c8adeeea.png
 rails.png: rails-7ad812856c7dc20006d43424bbe57d40.png
 recomendar.png: recomendar-58bb58134095572a8e32621d5cf2bbc5.png
+regular_smile.png: regular_smile-80e00676861e0197fc268d9b3eed5138.png
 report.png: report-4b16b2db6d9c64ef9570c470fd203794.png
 reports_admin/add-bug.png: reports_admin/add-bug-c0172adb58a85b377c5237d740c70f11.png
 reports_admin/agresive_bug.png: reports_admin/agresive_bug-feed0448ace2e3aa9b79af51cd126d04.png
@@ -224,6 +226,7 @@ reports_admin/secure.png: reports_admin/secure-d5a54a3089e3fae2f366942ab0653fdc.
 reports_admin/service.png: reports_admin/service-b5281f26b5da41fdc1c9da1f0b1bd2b9.png
 reports_admin/suport.png: reports_admin/suport-9a24fdf999c4f39eee8be96b1fa40c39.png
 reports_admin/worm_atack.png: reports_admin/worm_atack-3a11e053c82b48251899a29dc6342401.png
+sad_smile.png: sad_smile-98dc88cbdee7861112969b0b6ceb41bd.png
 smile.png: smile-59793b048553ed9422dc686a3648e95b.png
 star_image.png: star_image-337d825e6644244881a3f391d4aca7df.png
 student_small.png: student_small-4e850e4caa9b8bd388ac1b6d4709f30c.png
