--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -240,6 +240,7 @@ teacher_xsmall.png: teacher_xsmall-eb790ff7fce5fc451be0d648e0a5abfc.png
 teacher_xxsmall.png: teacher_xxsmall-8dea30577360e0254c48ed55f46adcd6.png
 trash.png: trash-fed6d579cb903b3e1a5b8fd4dde6cb5b.png
 upload.png: upload-dea8a2b793f9384245ce3c5ffefd5bb7.png
+utez.png: utez-76f76c91606d0ec0d3f9721ffa7ae11a.png
 video.png: video-d39ff5fe5586a5fc90cd42c1806472b8.png
-application.js: application-34157eec88660c01bfb2d78bc469e2bf.js
+application.js: application-9228c6e151cfcfb23c0e7238c660f3c4.js
 application.css: application-ba4fd6a3c0a73ae4f647b9f7399b5446.css
