Se agregan cambios para hpijnn

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -113,6 +113,7 @@ help/tareas/teacher/perfil_tarea.png: help/tareas/teacher/perfil_tarea-d48220a83
 help/tareas/teacher/subir_archivo.png: help/tareas/teacher/subir_archivo-f9f8449e399731f23ccaa7e398973412.png
 help/tareas/teacher/tareas.png: help/tareas/teacher/tareas-96653324804379c4208badae2af6055b.png
 home.png: home-a9bda954f5dae390279e7e37b3e9e421.png
+hpijnn.png: hpijnn-0d96de75c83b9ba7cc278fde63575a45.png
 iChat.png: iChat-a7d37790470eade586371de901eb6c4f.png
 iChat1.png: iChat1-65ad0eca98a4c9d4f4927d0382cea70e.png
 jquery.wysiwyg.bg.png: jquery.wysiwyg.bg-e2f731628eaa85ee3a9bf4b8d9e21749.png
